# associative_transducers

./: CMakeLists.txt  README.md
TestRunner/: CMakeLists.txt
TestRunner/src/: TestRunner.cpp
Transducers/: CMakeLists.txt  Readme.md
Transducers/include/data_structures/: pushdown_state_map.h  tree_state_map.h
Transducers/include/representation/: transition_description.h
Transducers/include/symbols/: match.h
Transducers/include/transducers/: compose.h
Transducers/include/transducers/aggregation/: symbol_buffer.h
Transducers/include/transducers/base/: empty_state.h  sink_transducer.h  transducer.h
Transducers/include/transducers/finite/: finite_transducer.h
Transducers/include/transducers/numeric/: multiply.h
Transducers/include/transducers/pushdown/: state_map_pushdown_transducer.h
Transducers/include/transducers/util/: buffer_transducer.h  match_adapter.h
Transducers/include/util/: range.h
Transducers/test/data_structures/: pushdown_state_map_test.cpp
Transducers/test/transducers/aggregation/: match_adapter_test.cpp  symbol_buffer_test.cpp
Transducers/test/transducers/finite/: finite_transducer_test.cpp
Transducers/test/transducers/numeric/: multiply_test.cpp
Transducers/test/transducers/pushdown/: state_map_pushdown_transducer_test.cpp
Transducers/test/transducers/util/: buffer_transducer_test.cpp  match_adapter_test.cpp
